added Base64 encoder/decoder so we don't need to use the one from sun. packages